<?xml version="1.0"?>
<package format="2">
  <name>basic_tf_tutorial</name>
  <version>0.0.0</version>
  <description>The basic_tf_tutorial package</description>

  <maintainer email="miran@todo.todo">miran</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
